[gd_scene load_steps=13 format=3 uid="uid://cgqf0fexq24hn"]

[ext_resource type="Script" path="res://Scene/SwordMan/swordMan.gd" id="1_qdog1"]
[ext_resource type="PackedScene" uid="uid://d1pcwt2yepu6x" path="res://Scene/prefab/spark2d.tscn" id="2_y21cb"]
[ext_resource type="Shader" path="res://addons/transitions/Dissolve2d.gdshader" id="3_7ivgi"]
[ext_resource type="Texture2D" uid="uid://cale1h2nqfdrh" path="res://Asset/ui/circle.png" id="3_hb7fs"]
[ext_resource type="Texture2D" uid="uid://d3ub4lbpbvdfo" path="res://icon.png" id="4_qhtys"]
[ext_resource type="Texture2D" uid="uid://vqpsuboe7qh4" path="res://Scene/sword10.png" id="4_wqwkc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cypk8"]
radius = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_avw2i"]
resource_local_to_scene = true
shader = ExtResource("3_7ivgi")
shader_parameter/dissolve_amount = 0.0
shader_parameter/dissolve_texture = ExtResource("4_qhtys")

[sub_resource type="Animation" id="Animation_jfh0h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sword9:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 6)]
}

[sub_resource type="Animation" id="Animation_loeln"]
resource_name = "die"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/dissolve_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sword9:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rsfwk"]
_data = {
"RESET": SubResource("Animation_jfh0h"),
"die": SubResource("Animation_loeln")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4lwu"]
radius = 3.6
height = 22.9168

[node name="CharacterBody2D" type="CharacterBody2D"]
rotation = 3.29867
script = ExtResource("1_qdog1")
color = Color(0.679011, 0, 0.166589, 1)
_shader = ExtResource("3_7ivgi")
_spark = ExtResource("2_y21cb")

[node name="body" type="Area2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2(5.96046e-08, -1)
rotation = -0.00872703
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_cypk8")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.679011, 0, 0.166589, 1)
material = SubResource("ShaderMaterial_avw2i")
position = Vector2(0, 2)
scale = Vector2(2, 2)
texture = ExtResource("3_hb7fs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
active = false
libraries = {
"": SubResource("AnimationLibrary_rsfwk")
}

[node name="Sword9" type="Sprite2D" parent="."]
position = Vector2(0.999998, -43)
rotation = 0.785398
scale = Vector2(6, 6)
texture = ExtResource("4_wqwkc")
offset = Vector2(-8.195, -7.71)

[node name="sword" type="Area2D" parent="Sword9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword9/sword"]
position = Vector2(-8, -7.6)
rotation = -0.794125
shape = SubResource("CapsuleShape2D_u4lwu")

[node name="Timer" type="Timer" parent="Sword9"]
wait_time = 0.01

[connection signal="area_entered" from="body" to="." method="_on_GetHit_area_entered"]
[connection signal="area_entered" from="Sword9/sword" to="." method="_on_Hit_area_entered"]
[connection signal="timeout" from="Sword9/Timer" to="." method="_on_timer_timeout"]
